--- a/src/app/components/temp-code-display/temp-code-display.component.html
+++ b/src/app/components/temp-code-display/temp-code-display.component.html
@@ -1,4 +1,5 @@
 <div>
-    <p>Temporary Code: {{ tempCode }}</p>
-</div>
+    <p>Your temporary code: <strong>{{ tempCode }}</strong></p>
+    <p>Next code will be generated in: <strong>{{ timeRemaining }}</strong> seconds</p>
+  </div>
   
