--- a/src/app/components/client-code-input/client-code-input.component.css
+++ b/src/app/components/client-code-input/client-code-input.component.css
@@ -8,6 +8,10 @@ h2 {
   margin-bottom: 20px;
 }
 
+input{
+  width: auto;
+}
+
 input[type="text"] {
   margin-bottom: 20px;
 }
@@ -15,7 +19,7 @@ input[type="text"] {
 button {
   background-color: #28a745; /* Green color for the button */
 }
-
+ 
 button:hover {
   background-color: #218838; /* Darker green on hover */
 }
